--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,7 +177,7 @@ h6 {
 --------------------------------------------------------------*/
 @media (max-width: 1199px) {
   .header {
-      padding: 20px 0 !important;
+    padding: 20px 0 !important;
   }
 }
 
@@ -837,6 +837,12 @@ section,
   z-index: 3;
 }
 
+.hero .container-fluid {
+  position: relative;
+  z-index: 3;
+}
+
+
 .hero h2 {
   margin: 0;
   font-size: 44px;
@@ -1130,7 +1136,7 @@ section,
   .services#fasility-addon {
     background-image: url('/assets/img/addon/bg-services.png');
     background-repeat: no-repeat;
-    background-position: left calc(300px + 100px);
+    background-position: left calc(350px + 100px);
     background-size: auto 50%;
   }
 }
@@ -1144,10 +1150,32 @@ section,
 }
 
 .services .service-item {
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
   position: relative;
-  padding-top: 40px;
+  padding: 20px;
   background-color: #ffffffe5;
 }
+
+.services .service-item:hover {
+  background-color: #f0f0f0f5;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.services .service-item .icon img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* penting agar gambar memenuhi kotak dengan rapi */
+  transition: transform 0.3s ease, filter 0.3s ease;
+  transform-origin: center center;
+  /* pusat zoom */
+}
+
+.services .service-item:hover .icon img {
+  transform: scale(1.1);
+  filter: brightness(1.1);
+}
+
 
 .services .service-item:before {
   content: "";
@@ -1184,6 +1212,9 @@ section,
   z-index: 2;
   position: relative;
 }
+
+
+
 
 .services .service-item .icon:before {
   position: absolute;
@@ -1544,7 +1575,7 @@ section,
 
 .pricing .featured {
   /* z-index: 10; */
-  border: 1px solid var(--default-color);
+  border: 1px solid var(--accent-color-green);
 }
 
 @media (min-width: 992px) {
@@ -2964,4 +2995,31 @@ section,
   padding-left: 5px;
   color: color-mix(in srgb, var(--default-color), transparent 60%);
   font-size: 14px;
+}
+
+
+
+/* Custom */
+.btn-icon {
+  text-decoration: none;
+}
+
+.circle-btn {
+  background-color: #f44336;
+  /* warna merah */
+  color: white;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: transform 0.2s ease;
+}
+
+.circle-btn:hover {
+  transform: scale(1.1);
+  background-color: #d32f2f;
 }
