--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -989,7 +989,6 @@ section,
   background-color: var(--accent-color-green);
   padding: 5px 15px;
   border-radius: 15px;
-  width: 90%;
 }
 
 .about .content p:last-child {
@@ -1042,6 +1041,10 @@ section,
   box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   transition: all 0.3s ease-out 0s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* biar konten bawah tetap di bawah */
+  min-height: 350px;
 }
 
 .stats .icon-box i {
@@ -1074,18 +1077,17 @@ section,
   color: var(--contrast-color);
 }
 
-.stats .icon-boxes .col-md-6:nth-child(2) .icon-box,
+/* .stats .icon-boxes .col-md-6:nth-child(2) .icon-box,
 .stats .icon-boxes .col-md-6:nth-child(4) .icon-box {
   margin-top: -40px;
-}
+} */
 
-@media (max-width: 768px) {
-
+/* @media (max-width: 768px) {
   .stats .icon-boxes .col-md-6:nth-child(2) .icon-box,
   .stats .icon-boxes .col-md-6:nth-child(4) .icon-box {
     margin-top: 0;
   }
-}
+} */
 
 
 .stats {
@@ -1194,8 +1196,8 @@ section,
 }
 
 .services .service-item .icon img {
-  width: 100%;
-  height: 100%;
+  width: 75%;
+  height: 75%;
   object-fit: cover;
   /* penting agar gambar memenuhi kotak dengan rapi */
   transition: transform 0.3s ease, filter 0.3s ease;
@@ -1244,7 +1246,7 @@ section,
 .services .service-item .icon {
   width: 250px;
   position: relative;
-  margin-right: 50px;
+  /* margin-right: 50px; */
   line-height: 0;
 }
 
@@ -1567,9 +1569,14 @@ section,
   border-radius: 15px;
 }
 
+.pricing .pricing-item h2 {
+  font-weight: 700;
+  font-size: 24px;
+}
+
 .pricing h3 {
   font-weight: 600;
-  margin-bottom: 15px;
+  margin-bottom: 18px;
   font-size: 20px;
   text-align: center;
 }
@@ -2102,6 +2109,15 @@ section,
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-height: 200px;
+}
+
+#contact-info .info-item{
+  min-height: 220px;
+}
+
+.contact .info-item.big {
+  min-height: 225px;
 }
 
 .contact .info-item i {
